# glfw-test

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp  shader_manager.cpp  shader_manager.hpp
